--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
         },
       }
     </script>
+    <script>
+      // Enforce HTTPS
+      if (window.location.protocol === 'http:' && window.location.hostname !== 'localhost') {
+        window.location.href = 'https:' + window.location.href.substring(window.location.protocol.length);
+      }
+    </script>
   <script type="importmap">
 {
   "imports": {
@@ -38,7 +44,7 @@
 }
 </script>
 </head>
-  <body class="bg-slate-50 text-slate-800 dark:bg-slate-900 dark:text-slate-300">
+  <body class="bg-slate-900 text-slate-300 bg-[url('https://www.transparenttextures.com/patterns/cubes.png')]">
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
   </body>
