--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#0f172a">
-    <title>Ability IT</title>
+    <title>AbilityTech</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -37,16 +37,16 @@
   <script type="importmap">
 {
   "imports": {
-    "react/": "https://aistudiocdn.com/react@^19.2.0/",
-    "react": "https://aistudiocdn.com/react@^19.2.0",
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
-    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.24.0",
-    "react-router-dom": "https://aistudiocdn.com/react-router-dom@^6.25.1"
+    "react/": "https://aistudiocdn.com/react@19.2.0/",
+    "react": "https://aistudiocdn.com/react@19.2.0",
+    "react-dom/": "https://aistudiocdn.com/react-dom@19.2.0/",
+    "@google/genai": "https://aistudiocdn.com/@google/genai@1.24.0",
+    "react-router-dom": "https://aistudiocdn.com/react-router-dom@6.25.1"
   }
 }
 </script>
 </head>
-  <body class="bg-slate-900 text-slate-300 bg-[url('https://www.transparenttextures.com/patterns/cubes.png')]">
+  <body class="bg-white text-slate-700 dark:bg-slate-900 dark:text-slate-300 bg-[url('https://www.transparenttextures.com/patterns/stardust.png')]">
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
   </body>
